--- a/templates/forms/edit_venue.html
+++ b/templates/forms/edit_venue.html
@@ -36,7 +36,11 @@
           <label for="genres">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
         </div>
-      <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
+      <div class="form-group">
+          <label for="seeking_talent">Seeking Talent</label>
+          {{ form.seeking_talent(class_ = 'form-control', placeholder='Y/N', autofocus = true) }}
+      </div>
+       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
